--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,15 @@ tzlocal==5.3
 urllib3==2.3.0
 Werkzeug==3.1.3
 gunicorn==20.1.0
+apscheduler==3.10.4
+colorhash==2.0.0
+configparser==7.1.0
+flask_monitoringdashboard==3.3.2
+numpy==2.2.3
+requests==2.31.0
+scipy==1.15.2
+sqlalchemy==2.0.38
+typing-extensions==4.12.2
+tzlocal==2.0.0
+faker==36.1.1
+tzdata==2025.1
