--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
 aniso8601==10.0.0
-APScheduler==3.11.0
+APScheduler==3.10.4
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+colorhash==2.0.0
+configparser==7.1.0
+Faker==36.1.1
 Flask==3.1.0
+Flask-MonitoringDashboard==3.3.2
 Flask-RESTful==0.3.10
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+numpy==2.2.3
 psutil==7.0.0
 py-healthcheck==1.10.1
 pytz==2025.1
 requests==2.31.0
+scipy==1.15.2
 six==1.17.0
-tzlocal==5.3
+SQLAlchemy==2.0.38
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==2.0.0
 urllib3==2.3.0
 Werkzeug==3.1.3
 gunicorn==20.1.0
-colorhash==2.0.0
-configparser==7.1.0
-flask_monitoringdashboard==3.3.2
-numpy==2.2.3
-scipy==1.15.2
-sqlalchemy==2.0.38
-typing-extensions==4.12.2
-faker==36.1.1
-tzdata==2025.1
