--- a/asr-11-experiment/productos/config.cfg
+++ b/asr-11-experiment/productos/config.cfg
@@ -18,7 +18,7 @@ PASSWORD=admin
 
 [database]
 TABLE_PREFIX=fmd
-;DATABASE=sqlite://///dashboard.db
+DATABASE=sqlite://///dashboard.db
 
 [visualization]
 TIMEZONE=America/Bogota
