--- a/sec_experiment/jwt/requirements.txt
+++ b/sec_experiment/jwt/requirements.txt
@@ -4,3 +4,5 @@ Flask-SQLAlchemy==3.1.1
 marshmallow==3.26.1
 marshmallow-sqlalchemy==1.4.1
 SQLAlchemy==2.0.39
+requests==2.32.3
+Flask-JWT-Extended==4.7.1
